# ownbuildsystem

./: CMakeLists.txt  Character.cpp  Character.h  Main.cpp  Math.cpp  Math.h  Weapon.cpp  Weapon.h  conanProfileDebug  conanfile.txt
.github/workflows/: cmake-single-platform.yml  linux-build.yml
Automation/: automation.py  build_sample_script.py
ChuckNorrisJokes/: main.cpp
